G-96 + G-143
